--- a/.travis.yml
+++ b/.travis.yml
@@ -4,4 +4,5 @@ php:
   - 5.4
   - 5.3
   - 5.2
+before_script: echo 'error_reporting = E_ALL & ~E_STRICT' >> ~/.phpenv/versions/$(phpenv version-name)/etc/php.ini
 script: cd test && phpunit .
